backend/pricing-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-service
  labels:
    app: pricing-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pricing-service
  template:
    metadata:
      labels:
        app: pricing-service
    spec:
      serviceAccountName: pricing-service
      containers:
        - name: pricing-service
          image: amazon-clone-pricing-service:latest
          imagePullPolicy: Never
          imagePullPolicy: IfNotPresent
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8017
          readinessProbe:
            httpGet:
              path: /readyz/
              port: 8017
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8017
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
