backend/pricing-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
  labels:
    app: pricing-service
spec:
  selector:
    app: pricing-service
  ports:
    - port: 80
      targetPort: 8017
      protocol: TCP
  type: ClusterIP
